# moveit_compute_default_collisions

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp  package.xml
bindings/python/: CMakeLists.txt  pymcdc.cpp
bindings/python/tests/: compute_collisions_test.py  robot6.srdf  robot6.urdf
include/: moveit_compute_default_collisions.h  version.h.in
src/: moveit_compute_default_collisions.cpp
