<?xml version="1.0"?>
<package format="3">
  <name>moveit_compute_default_collisions</name>
  <version>0.1.0</version>
  <description>moveit_compute_default_collisions</description>

  <license>BSD</license>

  <author>Alessio Rocchi</author>
  <author>Enrico Mingo Hoffman</author>
  <author email="enrico.mingo@iit.it">Enrico Mingo Hoffman</author>

  <maintainer email="enrico.mingo@iit.it">Enrico Mingo Hoffman</maintainer>

  <url type="website">none</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>rospy</exec_depend>

  <exec_depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</exec_depend>

  <test_depend condition="$ROS_PYTHON_VERSION == 2">python-mock</test_depend>
  <test_depend condition="$ROS_PYTHON_VERSION == 3">python3-mock</test_depend>

</package>
